--- a/sample.yaml
+++ b/sample.yaml
@@ -3,7 +3,7 @@
 sessions:
     - prefixes: ["NASDAQ"]
       date: ["2018-02-28"]
-      session: ["0930-1500"]
+      session: "0930-1500"
 
     - groups: ["amex_idc"]
       date: ["2018-03-08"]
