--- a/sample.yaml
+++ b/sample.yaml
@@ -1,7 +1,8 @@
 ---
 
+
 sessions:
-    - prefixes: ["NASDAQ"]
+    - prefixes: ["NASDAQ", "NYSE"]
       date: "2018-02-28"
       session:
         premarket: undefined
