--- a/sample.yaml
+++ b/sample.yaml
@@ -1,7 +1,7 @@
 ---
 
 sessions:
-    - prefixes: ["NASDAQ", "NYSE"]
+    - prefixes: ["NASDAQ", "NYSE"] # На самом деле это "exchanges" - для AMEX нужно указывать NYSE ARCA & MKT
       date: "2018-02-28"
       session:
         premarket: undefined
